--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,10 +22,10 @@
     "noFallthroughCasesInSwitch": true
   },
   "include": [
-    "src/**/*.ts", 
-    "src/**/*.d.ts", 
-    "src/**/*.tsx", 
-    "src/**/*.vue"
+    "*/**/*.ts", 
+    "*/**/*.d.ts", 
+    "*/**/*.tsx",
+    "*/**/*.vue"
   ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
