--- a/package.json
+++ b/package.json
@@ -1,20 +1,27 @@
 {
   "name": "vue3-ui",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
+  "workspaces": [
+    "packages/*",
+    "play",
+    "docs"
+  ],
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint . --ext .js,.ts,.tsx,.vue --fix",
     "prepare": "husky install",
-    "docs:dev": "vitepress dev docs",
-    "docs:build": "vitepress build docs",
-    "docs:preview": "vitepress preview docs",
+    "docs:dev": "pnpm run -C docs dev",
+    "docs:build": "pnpm run -C docs build",
+    "docs:preview": "pnpm run -C docs preview",
     "test": "vitest"
   },
   "dependencies": {
-    "vue": "^3.2.47"
+    "@vue3-ui/components": "workspace:^",
+    "@vue3-ui/theme-chalk": "workspace:^",
+    "vue": "^3.3.4"
   },
   "devDependencies": {
     "@testing-library/vue": "^7.0.0",
@@ -30,10 +37,9 @@
     "husky": "^8.0.3",
     "lint-staged": "^13.2.2",
     "prettier": "^2.8.8",
+    "sass": "^1.63.6",
     "typescript": "^5.0.2",
     "vite": "^4.3.9",
-    "vitepress": "1.0.0-beta.3",
-    "vitepress-theme-demoblock": "^1.4.2",
     "vitest": "^0.32.2",
     "vue-tsc": "^1.4.2"
   },
