--- a/packages/theme-chalk/package.json
+++ b/packages/theme-chalk/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@vue3-ui/theme-chalk",
+  "name": "@pc-vue3-ui/theme-chalk",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
