--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,5 +16,5 @@ jobs:
     - uses: actions/setup-node@v3
       with:
         node-version: 16.14.0
-    - run: pnpm install
-    - run: pnpm run build
+    - run: npm install
+    - run: npm run build
