--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,14 +13,13 @@ jobs:
     # 下载代码
     - uses: actions/checkout@v3
     # 下载安装 pnpm
-    - uses: pnpm/action-setup@0609f0983b7a228f052f81ef4c3d6510cae254ad
+    - uses: pnpm/action-setup@v2
       with:
-      version: 8.6.6
+      version: 8.5.0
     # 下载安装 Node.js
     - uses: actions/setup-node@v3
       with:
         node-version: 16.14.0
         cache: 'pnpm'
-    - run: pnpm -v
     - run: pnpm install
     - run: pnpm run build
