--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dev": "vite",
     "build": "vue-tsc && vite build",
     "build:component": "node ./scripts/build.js",
+    "build:style": "pnpm run -C packages/theme-chalk build",
     "preview": "vite preview",
     "lint": "eslint . --ext .js,.ts,.tsx,.vue --fix",
     "prepare": "husky install",
