--- a/packages/theme-chalk/package.json
+++ b/packages/theme-chalk/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "sass ./src/index.scss index.css --no-source-map"
   },
   "keywords": [],
   "author": "",
